Product view, Breadcrumb start

--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -3,6 +3,8 @@
 <head>
     <title></title>
 
+    <link href="Content/SiteMain.css" rel="stylesheet" />
+
     <link href="Content/ie10mobile.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
 
@@ -10,10 +12,10 @@
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
 
-    
+
     <link href="Content/durandal.css" rel="stylesheet" />
     <link href="Content/starterkit.css" rel="stylesheet" />
-    
+
 </head>
 <body>
 
@@ -28,10 +30,9 @@
 
     <script src="Scripts/require.js" data-main="App/main"></script>
 
-
     <!--Lovas Istvan Core Helpers-->
     <script src="App/core/multilingual/dictionary.js"></script>
-
+    <script src="App/core/data/data.js"></script>
 
 </body>
 </html>
