--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -26,13 +26,14 @@
     <!--libs-->
     <script src="Scripts/jquery-2.1.0.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/knockout-2.3.0.js"></script>
+    <script src="Scripts/knockout-3.1.0.js"></script>
 
     <script src="Scripts/require.js" data-main="App/main"></script>
 
     <!--Lovas Istvan Core Helpers-->
     <script src="App/core/multilingual/dictionary.js"></script>
     <script src="App/core/data/data.js"></script>
+    <script src="App/core/utils/data_validation_helpers.js"></script>
 
 </body>
 </html>
