404 view; cart view; shopping status bar

--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -3,8 +3,6 @@
 <head>
     <title></title>
 
-    <link href="Content/SiteMain.css" rel="stylesheet" />
-
     <link href="Content/ie10mobile.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
 
@@ -16,6 +14,9 @@
     <link href="Content/durandal.css" rel="stylesheet" />
     <link href="Content/starterkit.css" rel="stylesheet" />
 
+    <link href="Content/SiteLocal/ProcessStatus.css" rel="stylesheet" />
+    <link href="Content/SiteLocal/SiteMain.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -26,7 +27,10 @@
     <!--libs-->
     <script src="Scripts/jquery-2.1.0.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/knockout-3.1.0.js"></script>
+
+    <script src="Scripts/knockout-2.3.0.js"></script>
+    <!--<script src="Scripts/knockout-3.1.0.js"></script>-->
+    <!--<script src="Scripts/knockout.mapping-latest.js"></script>-->
 
     <script src="Scripts/require.js" data-main="App/main"></script>
 
