--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -17,6 +17,8 @@
     <link href="Content/SiteLocal/ProcessStatus.css" rel="stylesheet" />
     <link href="Content/SiteLocal/SiteMain.css" rel="stylesheet" />
 
+    <link href="Content/toastr.min.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -32,12 +34,15 @@
     <!--<script src="Scripts/knockout-3.1.0.js"></script>-->
     <!--<script src="Scripts/knockout.mapping-latest.js"></script>-->
 
+    <script src="Scripts/toastr.min.js"></script>
+
     <script src="Scripts/require.js" data-main="App/main"></script>
 
     <!--Lovas Istvan Core Helpers-->
     <script src="App/core/multilingual/dictionary.js"></script>
     <script src="App/core/data/data.js"></script>
     <script src="App/core/utils/data_validation_helpers.js"></script>
+    <script src="App/core/utils/toast_help.js"></script>
 
 </body>
 </html>
