local storage (amplify)

--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -34,6 +34,8 @@
     <!--<script src="Scripts/knockout-3.1.0.js"></script>-->
     <!--<script src="Scripts/knockout.mapping-latest.js"></script>-->
 
+    <script src="Scripts/amplify_1_1_2/amplify.min.js"></script>
+
     <script src="Scripts/toastr.min.js"></script>
 
     <script src="Scripts/require.js" data-main="App/main"></script>
