--- a/Implementation/WebShopUI/WebShopUI/index.html
+++ b/Implementation/WebShopUI/WebShopUI/index.html
@@ -28,6 +28,8 @@
 
     <!--libs-->
     <script src="Scripts/jquery-2.1.0.min.js"></script>
+    <script src="Scripts/jquery.csv-0.71.min.js"></script>
+
     <script src="Scripts/bootstrap.min.js"></script>
 
     <script src="Scripts/knockout-2.3.0.js"></script>
